To stop vertically squishing the project thumbnails

--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,7 @@ p + .condensed-list { margin-top: -1em; }
 	margin-left: auto;
 	margin-right: auto;
 	width: 80%;
-	max-height: 100px;
+	/*max-height: 100px;*/
 	padding-top: 15px;
 	/*background-color: green; /* for layout/debugging *!/*!/*/
 }
